Everything is awesome

--- a/trainingProject.fe/src/index.css
+++ b/trainingProject.fe/src/index.css
@@ -16,8 +16,8 @@
     --color-accent: hsl(221 83% 53%);
     --color-accent-secondary: hsl(230 72% 70%);
 
-    /* 4. SECONDARY ACCENT COLORS - WANTED SOME OTHER COLOURS SORRY*/
-    --color-secondary-accent: 	hsl(179, 28%, 69%);
+    /* 4. SECONDARY ACCENT COLORS - WANTED SOME OTHER COLOURS */
+    --color-secondary-accent: hsl(208, 31%, 35%);
 
 
     /* Statusfarben */
